--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
     "unified": "^11.0.0",
+    "vite": "^6.2.2",
     "vivus": "^0.4.6"
   },
   "devDependencies": {
