--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "clean": "rm -rf node_modules .next .contentlayer",
     "lint": "next lint --fix",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "test": "vitest run"
+    "start": "next start -p $PORT"
   },
   "repository": {
     "type": "git",
@@ -53,8 +52,6 @@
     "@swc/core": "^1.11.11",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
@@ -80,7 +77,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.9",
     "webpack": "^5.10.0"
   },
   "prettier": {
