--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
     "@date-fns/tz": "^1.0.2",
     "@heroicons/react": "^2.0.18",
     "contentlayer2": "^0.5.0",
-    "daisyui": "^5.0.0-beta.7",
+    "daisyui": "^5.0.0",
     "date-fns": "^4.1.0",
     "improved-relative-time": "^1.1.1",
-    "isomorphic-unfetch": "^4.0.0",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
     "next": "^15.0.1",
     "next-contentlayer2": "^0.5.0",
     "next-secure-headers": "^2.1.0",
     "next-themes": "^0.4.5",
-    "prop-types": "^15.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-slug": "^6.0.0",
@@ -39,7 +37,6 @@
     "remark-gfm": "^4.0.0",
     "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
-    "unified": "^11.0.0",
     "vivus": "^0.4.6"
   },
   "devDependencies": {
