--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "clean": "rm -rf node_modules .next .contentlayer",
     "lint": "next lint --fix",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "test": "vitest run"
+    "start": "next start -p $PORT"
   },
   "repository": {
     "type": "git",
@@ -21,21 +20,16 @@
   "dependencies": {
     "@date-fns/tz": "^1.0.2",
     "@heroicons/react": "^2.0.18",
-    "@mdx-js/react": "^3.0.0",
-    "@next/env": "^15.0.1",
-    "@root/walk": "^1.1.0",
     "contentlayer2": "^0.5.0",
-    "daisyui": "^5.0.0-beta.7",
+    "daisyui": "^5.0.0",
     "date-fns": "^4.1.0",
-    "gray-matter": "^4.0.3",
-    "isomorphic-unfetch": "^4.0.0",
+    "improved-relative-time": "^1.1.1",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
     "next": "^15.0.1",
     "next-contentlayer2": "^0.5.0",
     "next-secure-headers": "^2.1.0",
     "next-themes": "^0.4.5",
-    "prop-types": "^15.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-slug": "^6.0.0",
@@ -43,31 +37,24 @@
     "remark-gfm": "^4.0.0",
     "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
-    "unified": "^11.0.0",
     "vivus": "^0.4.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@swc/core": "^1.11.11",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.11",
     "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
     "@types/rss": "^0.0.32",
     "@types/vivus": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "dlx": "^0.2.1",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
@@ -75,11 +62,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.2.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.9",
-    "webpack": "^5.10.0"
+    "typescript": "^5.2.2"
   },
   "prettier": {
     "trailingComma": "es5",
