--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "contentlayer2": "^0.5.0",
     "daisyui": "^5.0.0",
     "date-fns": "^4.1.0",
+    "feed": "^5.0.0",
     "improved-relative-time": "^1.1.1",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
@@ -36,7 +37,6 @@
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
-    "rss": "^1.2.2",
     "vivus": "^0.4.6"
   },
   "devDependencies": {
