--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@date-fns/tz": "^1.0.2",
     "@heroicons/react": "^2.0.18",
+    "@rowanmanning/feed-parser": "^2.0.2",
     "contentlayer2": "^0.5.0",
     "daisyui": "^5.0.0",
     "date-fns": "^4.1.0",
+    "feed": "^5.0.0",
     "improved-relative-time": "^1.1.1",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
@@ -35,8 +37,6 @@
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
-    "rss": "^1.2.2",
-    "rss-parser": "^3.13.0",
     "vivus": "^0.4.6"
   },
   "devDependencies": {
