--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/vivus": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.0.5",
     "eslint-config-prettier": "^10.0.1",
