--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "eslint-config-next": "^16.0.5",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-markdown": "^5.0.0",
+    "@eslint/markdown": "^6.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "postcss": "^8.4.31",
